--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,7 @@ test:
 # Similarly, if you deploy your application as a Docker container, you must
 # ensure the database is located in a persisted volume.
 production:
+  <<: *default
   database: <%= ENV['DATABASE_PATH'] %>
 
   primary:
