--- a/config/database.yml
+++ b/config/database.yml
@@ -31,20 +31,20 @@ production:
   <<: *default
   database: <%= ENV['DATABASE_PATH'] %>
 
-  primary:
-    <<: *default
-    # database: path/to/persistent/storage/production.sqlite3
-    database: <%= ENV['DATABASE_PATH'] %>
+  # primary:
+  #   <<: *default
+  #   # database: path/to/persistent/storage/production.sqlite3
+  #   database: <%= ENV['DATABASE_PATH'] %>
 
-  cache:
-    <<: *default
-    # database: path/to/persistent/storage/production_cache.sqlite3
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *default
-    # database: path/to/persistent/storage/production_queue.sqlite3
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *default
-    # database: path/to/persistent/storage/production_cable.sqlite3
-    migrations_paths: db/cable_migrate
+  # cache:
+  #   <<: *default
+  #   # database: path/to/persistent/storage/production_cache.sqlite3
+  #   migrations_paths: db/cache_migrate
+  # queue:
+  #   <<: *default
+  #   # database: path/to/persistent/storage/production_queue.sqlite3
+  #   migrations_paths: db/queue_migrate
+  # cable:
+  #   <<: *default
+  #   # database: path/to/persistent/storage/production_cable.sqlite3
+  #   migrations_paths: db/cable_migrate
